# goit_python_web_django_lect_02_notes

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
doc/: env
notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/static/noteapp/js/: modal.js
notes/noteapp/templates/noteapp/: base.html  base_nav.html  detail.html  index.html  note.html  tags.html
notes/notes/: settings.py  urls.py
notes/users/: forms.py  signals.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: delete.html  profile.html  signup.html
scipts/: makemigrations.cmd  migrate.cmd  runserver.cmd
